[package]
name = "advent-of-code-2022-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eval = "0.4.3"
itertools = "0.11.0"
phf = { version = "0.11.2", features = ["macros"] }
serde_json = "1.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
fn-cache = "1.0.0"
